```typescript
// These enums mirror the definitions in common.v1.proto
// Using string enums for easier debugging and potential direct use in string-based APIs.

export enum AdNetworkType {
  AD_NETWORK_TYPE_UNSPECIFIED = 'AD_NETWORK_TYPE_UNSPECIFIED',
  GOOGLE_ADS = 'GOOGLE_ADS',
  INSTAGRAM_ADS = 'INSTAGRAM_ADS', // (Facebook Marketing API)
  TIKTOK_ADS = 'TIKTOK_ADS',
  SNAPCHAT_ADS = 'SNAPCHAT_ADS',
}

export enum CampaignStatus {
  CAMPAIGN_STATUS_UNSPECIFIED = 'CAMPAIGN_STATUS_UNSPECIFIED',
  DRAFT = 'DRAFT',
  ACTIVE = 'ACTIVE',
  PAUSED = 'PAUSED',
  ARCHIVED = 'ARCHIVED',
  REMOVED = 'REMOVED', // Or Deleted
  PENDING_REVIEW = 'PENDING_REVIEW',
  REJECTED = 'REJECTED',
}

export enum AdSetStatus {
  AD_SET_STATUS_UNSPECIFIED = 'AD_SET_STATUS_UNSPECIFIED',
  DRAFT = 'DRAFT',
  ACTIVE = 'ACTIVE',
  PAUSED = 'PAUSED',
  ARCHIVED = 'ARCHIVED',
  REMOVED = 'REMOVED',
  PENDING_REVIEW = 'PENDING_REVIEW',
  REJECTED = 'REJECTED',
}

export enum CreativeType {
  CREATIVE_TYPE_UNSPECIFIED = 'CREATIVE_TYPE_UNSPECIFIED',
  IMAGE = 'IMAGE',
  VIDEO = 'VIDEO',
  TEXT = 'TEXT',
  CAROUSEL = 'CAROUSEL',
  HTML5 = 'HTML5',
}

export enum AudienceType {
  AUDIENCE_TYPE_UNSPECIFIED = 'AUDIENCE_TYPE_UNSPECIFIED',
  CUSTOM_AUDIENCE = 'CUSTOM_AUDIENCE',
  LOOKALIKE_AUDIENCE = 'LOOKALIKE_AUDIENCE',
  INTEREST_BASED = 'INTEREST_BASED',
  DEMOGRAPHIC_BASED = 'DEMOGRAPHIC_BASED',
}

export enum AudienceSyncStatus {
  AUDIENCE_SYNC_STATUS_UNSPECIFIED = 'AUDIENCE_SYNC_STATUS_UNSPECIFIED',
  PENDING = 'PENDING',
  IN_PROGRESS = 'IN_PROGRESS',
  COMPLETED = 'COMPLETED',
  FAILED = 'FAILED',
  NEEDS_ATTENTION = 'NEEDS_ATTENTION',
}

export enum FeedFormat {
  FEED_FORMAT_UNSPECIFIED = 'FEED_FORMAT_UNSPECIFIED',
  CSV = 'CSV',
  XML = 'XML',
  TSV = 'TSV',
  JSON = 'JSON', // For some networks
}

export enum FeedSubmissionStatus {
  FEED_SUBMISSION_STATUS_UNSPECIFIED = 'FEED_SUBMISSION_STATUS_UNSPECIFIED',
  SUBMITTED = 'SUBMITTED',
  PROCESSING = 'PROCESSING',
  SUCCESS = 'SUCCESS',
  FAILED_VALIDATION = 'FAILED_VALIDATION',
  FAILED_PROCESSING = 'FAILED_PROCESSING',
  PARTIAL_SUCCESS = 'PARTIAL_SUCCESS',
}

export enum ValidationSeverity {
  VALIDATION_SEVERITY_UNSPECIFIED = 'VALIDATION_SEVERITY_UNSPECIFIED',
  ERROR = 'ERROR', // Blocks submission
  WARNING = 'WARNING', // May cause issues, informational
  INFO = 'INFO',
}

export enum Status {
  STATUS_UNSPECIFIED = 'STATUS_UNSPECIFIED',
  SUCCESS = 'SUCCESS',
  FAILURE = 'FAILURE',
  PARTIAL_SUCCESS = 'PARTIAL_SUCCESS',
}

export enum Granularity {
  GRANULARITY_UNSPECIFIED = 'GRANULARITY_UNSPECIFIED',
  DAILY = 'DAILY',
  HOURLY = 'HOURLY',
  TOTAL = 'TOTAL', // Overall summary
}

// Additional internal enums can be added here if needed
```